Migrate PicketLink Console to Core Console 1.5.x